package com.labdev.labdev.model;

public class PessoaFisica {

}
