package com.labdev.labdev.model;

public class Vantagem {

}
