@startuml Classe

abstract Usuario{
    - id: int
    - nome: String
    - email: String
    - senha: String
    - endereco: Endereco
    + Usuario(nome: String, email: String, senha: String, endereco: Endereco)
    + Usuario(email: String, senha: String)
    + registrar(): void
    + autenticar(): void
}

class PessoaFisica {
    - cpf: String
    - rg: String
    + PessoaFisica(nome: String, email: String, senha: String, endereco: Endereco, cpf: String, rg: String)
}

class PessoaJuridica {
    - cnpj: string
    + PessoaJuridica(nome: String, email: String, senha: String, endereco: Endereco, cnpj: String)
}

class Instituicao {
    - MOEDAS_POR_SEMESTRE: int = 1000
    + cadastrarProfessores(List<Professor>): void
    + distribuirMoedas(moedas: int): void
    + distribuirMoedas(moedas: int, professor: Professor): void
}

class Endereco {
    - cep: int
    - numero: int
    - rua: String
    - bairro: String
    - cidade: String
    - estado: String
}

class Aluno {
    - semestre: int
    + selecionarInstituicao(): void
}

class Professor {
    - departamento: String
}

class Empresa {
    + cadastrarVantagem(nome: String, descricao: String, foto: String, custo: int): void
}

class Transacao {
    - data: Date
    - valor: int
    - remetente: Usuario
    - destinatario: Usuario
    + Transacao(remetente: Usuario, destinatario: Usuario, valor: int)
    + relatorio(): String
}

class Extrato {
    - saldo: int
    - transacoes: List<Transacoes>
    + relatorio(): String
}

class Vantagem {
    - nome: String
    - descricao: String
    - foto: String
    - custo: int
    + Vantagem(nome: String, descricao: String, foto: String, custo: int)
    + resgatar(): void
}

class Email {
    - remetente: String
    - destinatario: String
    - assunto: String
    - conteudo: String
    + Email(remetente: String, destinatario: String, assunto: String, conteudo:String):void
    + enviar(): void
}

class Carteira {
    - saldo: int
    + consultarExtrato(): Extrato
    - descontarSaldo(valor: int): void
    + totalMoedas(): int
}

class CarteiraAluno {
    + trocarMoedas(vantagem: Vantagem): void
}

class CarteiraProfessor{
    + transferir(professor: Professor, aluno: Aluno, valor: double, motivo: String): void
}

class Cupom {
    - codigo: String
}

'Relacionamento Usuario
Usuario <|-- PessoaFisica
Usuario <|-- PessoaJuridica

'Relacionamento PessoaFisica
PessoaFisica <|-- Aluno
PessoaFisica <|-- Professor

'Relacionamento PessoaJuridica
PessoaJuridica <|-- Empresa
PessoaJuridica <|-- Instituicao

'Relacionamento Instituicao
Instituicao "1" o-- "*" Professor
Instituicao <-- Aluno

'Relacionamento CarteiraAluno
CarteiraAluno "1" <-- "1" Aluno


'Relacionamento CarteiraProfessor
CarteiraProfessor "1" <-- "1" Professor

'Relacionamento Carteira
Carteira <|-- CarteiraProfessor
Carteira <|-- CarteiraAluno
Carteira  o--  Transacao

'Relacionamento Transacao
Transacao <-- Cupom

'Relacionamento Empresa
Empresa "1" o--> "*" Vantagem

@enduml